--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@ body {
     line-height: 1.6;
     color: #333;
     margin: 0;
-    padding: 0;    
+    padding: 0;
 }
 
 header {
-    background-color: #009688; 
+    background-color: #009688;
     padding: 1rem;
     text-align: center;
 }
@@ -17,9 +17,15 @@ header h1 {
     margin: 0;
 }
 
+#mainPage {
+    display: flex;
+}
+
 nav {
-    background-color: #4CAF50; 
+    background-color: #4CAF50;
     padding: 1rem;
+    width: 200px;
+    flex-shrink: 0;
 }
 
 nav ul {
@@ -28,36 +34,37 @@ nav ul {
 }
 
 nav ul li {
-    display: inline-block;
-    margin-right: 1rem;
+    margin-bottom: 1rem;
 }
 
 nav ul li a {
     text-decoration: none;
-    color: #fff; 
+    color: #fff;
+    display: block;
 }
 
 main {
     padding: 2rem;
+    flex-grow: 1;
 }
 
 main section {
     margin-bottom: 2rem;
-    text-align: center; 
+    text-align: center;
 }
 
 main section h2 {
     margin-top: 0;
-    color: #009688; 
+    color: #009688;
 }
 
 #loginPage {
-    text-align: center; 
+    text-align: center;
 }
 
 #loginForm {
-    display: inline-block; 
-    background-color: #b3e0ff; 
+    display: inline-block;
+    background-color: #b3e0ff;
     padding: 1rem;
     border-radius: 5px;
 }
@@ -85,17 +92,17 @@ main section h2 {
 }
 
 #loginForm button:hover {
-    background-color: #00796b; 
+    background-color: #00796b;
 }
 
 footer {
-    background-color: #4CAF50; 
+    background-color: #009688;
     padding: 1rem;
     text-align: center;
 }
 
 footer p {
-    color: white;
+    color: white; 
     margin: 0;
 }
 
@@ -109,7 +116,6 @@ footer p {
 }
 
 #logoutButton:hover {
-    background-color: darkgreen; 
+    background-color: darkgreen;
 }
-
 
