--- a/styles.css
+++ b/styles.css
@@ -132,3 +132,38 @@ footer p {
     background-color: #F5F5DC;
 }
 
+#bookForm {
+    display: inline-block;
+    background-color: #f4f4f4;
+    padding: 3rem;
+    border-radius: 2px;
+    width: 200px;
+}
+
+#bookForm label {
+    display: block;
+    margin-bottom: 0.5rem;
+    text-align: left; 
+}
+
+#bookForm input,
+#bookForm textarea {
+    padding: 0.5rem;
+    width: 100%;
+    margin-bottom: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+#bookForm button {
+    padding: 0.5rem 1rem;
+    background-color: #333;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#bookForm button:hover {
+    background-color: #333;
+}
