--- a/WWW/styles.css
+++ b/WWW/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 #loginPage h2 {
-    color: white; 
+    color: black; 
 }
 
 header {
@@ -63,7 +63,7 @@ main section h2 {
 }
 
 #loginPage {
-    background-image: url('Fondo.jpg'); 
+    background-image: url('imagenes/Fondo.jpg'); 
     background-size: cover; 
     background-position: center; 
     height: 100vh; 
@@ -97,7 +97,7 @@ main section h2 {
 
 #loginForm button {
     padding: 0.5rem 1rem;
-    background-color: #654321; 
+    background-color: #666; 
     color: white;
     border: none;
     border-radius: 4px;
@@ -105,7 +105,7 @@ main section h2 {
 }
 
 #loginForm button:hover {
-    background-color: #8B4513; 
+    background-color: #666; 
 }
 
 footer {
