--- a/WWW/styles.css
+++ b/WWW/styles.css
@@ -258,3 +258,17 @@ tbody tr:nth-child(even) {
     align-items: center;
     margin-top: 1rem;
 }
+
+.image-container {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: none;
+}
