--- a/WWW/styles.css
+++ b/WWW/styles.css
@@ -50,7 +50,6 @@ nav ul li a {
 }
 
 main {
-    padding: 2rem;
     flex-grow: 1;
 }
 
@@ -260,12 +259,14 @@ tbody tr:nth-child(even) {
 }
 
 .image-container {
+    position: absolute;
+    top: 0;
+    left: 0; 
     width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
     z-index: 1;
 }
+
 .image-container img {
     width: 100%;
     height: 100%;
